--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -21,7 +21,7 @@ html.dark {
     --el-warn-row-bgc:#121b24 !important;
     --border-color: #4b4b4b;
     .el-table, .el-table__cell {
-        border: 1px solid $el-border-color;
+        // border: 1px solid $el-border-color;
     }
     .el-table tr th .cell {
         color: $el-bg-font-color !important;
@@ -29,17 +29,17 @@ html.dark {
     .el-table__row.warnBg .el-table__cell{
         width: 100%;
         height: 100%;
-        background-color:$el-warn-bgc !important;
+        background-color:$el-warn-bgc ;
         color: $el-font-cell-color;
     }
     .el-table__row:hover .el-table__cell {
         background-color: $el-warn-bgc-hover !important; 
     }
     .el-table__body tr:hover > td {
-        background-color: $el-warn-bgc-hover !important;
+        background-color: $el-warn-bgc-hover !important; 
     }
     .el-table__body tr.current-row > td {
-        background-color:$el-warn-bgc-current !important;
+        background-color:$el-warn-bgc-current !important; 
     }
 }
 
